# practice-suvorov

./: .gitignore
01-200903/: TODO.txt  arr.cpp  cond.cpp  err  main.cpp  plan.md  solution.cpp  ub-01.cpp  ub-02.cpp  wtf.cpp
03-200917/: ratio.cpp
07-201105/: README.md
10-201126/: 01.tif  02.tif  03.tif
11-201203/: 02-move-03-11.cpp  03-return-move.cpp  04-moved-from.cpp  05-moved-from-ptr.cpp  06-ub.cpp  07a-ub-fix.cpp  07b-bad.cpp  08-swap-fix.cpp  09-copy-swap.cpp
12-201210/: 01-misc.md  02-moved-from.cpp  03-return-move.cpp  04-return-unmovable.cpp  05-rule-of-five.cpp  06-rule-of-three-old.cpp  07-copy-and-swap.cpp  08-notes.md  09-deque.cpp  10-deque.tif
14-210121/: README.md
15-210128/visitor/: CMakeLists.txt  README.md  employee.h  employee_enums.cpp  employee_enums.h  employee_extra_tu.cpp  employee_test.cpp
16-210204/: 01.cpp  02.cpp  03.cpp  04.cpp  05.txt  Java03.java
18-210218/: 01-ctor-exception.cpp  02-arr-partial-construct.cpp  03-vec-partial-construct.cpp  04-custom-vec-new.cpp  05-custom-vec-placement-new.cpp  06-copy-strong-exception-safety.cpp
19-210225/: 01.cpp  02.cpp  03.cpp  test-01.cpp  test-02.txt
21-210311/: README.md
22-210318/: 01-bad.cpp  02-bad.cpp  03.cpp
23-210413/: README.md  problem-3-solution.md
24-210420/: pieces.txt
26-210511/: README.md
27-210518/: README.md
27-210518/problem/: 01_make_unique.h  01_test_make_unique.cpp  02_concat.h  02_test_concat.cpp  03_concat_separated.h  03_test_concat_separated.cpp  CMakeLists.txt  doctest_main.cpp
28-210525/: README.md
29-210601/: README.md
(+156 files in other folders)
